2008-01-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/PangoLayout.xs: Work around what appears to be a bug in
	ExtUtils::ParseXS' xsubpp (used by default in perl 5.10.0) for the
	pango_layout_line_x_to_index xsub: manually handle output
	arguments, i.e. dont't rely on OUTLIST.  This should fix the
	"Modification of a read-only value attempted" issue.

	* Gtk2.pm
	* Makefile.PL: Require Cairo if gtk+ >= 2.8 or pango >= 1.10.
	Previously, we just checked for gtk+ >= 2.8.  A new pango usually
	implies a new gtk+, but that's not necessarily the case.  So check
	both independently and require Cairo if either is new enough.

	* Makefile.PL
	* README: Require Glib 1.163.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.163.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/GtkWidget.xs:  Doc fixes; the docs on
	gtk_widget_get_size_request() actually belonged on
	gtk_widget_size_request().  Swap that and add docs for
	get_size_request() and get_child_requisition(), copied
	from gtk+.  Also fix the signature for get_size_request(),
	as suggested by Kevin Ryde.

	* xs/GdkPixbuf.xs: Fix the signature docs for get_file_info(),
	suggested by Kevin Ryde.  Also add a brief description of the
	function.

2007-12-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/PangoCairo.xs (gtk2perl_pango_cairo_shape_renderer_func): Put
	dGPERL_CALLBACK_MARSHAL_SP at the end of the list of declarations
	to avoid a compilation failure on Win32.

2007-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkIconTheme.t (list_contexts test): Fix test failure.

	* tools/genkeysyms.pl: Fix the SYNOPSIS example (from Debian
	bug #422223).

	* tools/genkeysyms.pl: Mention Gtk2::Gdk->keyval_from_name in the
	DESCRIPTION section of Gtk2::Gdk::Keysyms, as suggested by Kevin
	Ryde.

	* xs/Gtk2.xs: gtk_check_version's return value recently acquired a